apps/ntfy/controller/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ntfy-svc  
  namespace: ntfy
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort:  http-ntfy
  type: ClusterIP
  selector:
    app: ntfy-pod
